objects/SESOC__Recipient__c.object
<CustomObject>
    <description>E-Signature Document Recipients</description>
    <fields>
        <fullName>SESOC__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this optional lookup field to track the association to a Contact. By default, it is blank.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recipients</relationshipLabel>
        <relationshipName>Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SESOC__Datetime_of_Completion__c</fullName>
        <description>The system automatically populates this datetime field to track the time the recipient completed the E-Signature ceremony. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date/Time of Completion</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SESOC__Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this required lookup field to the package.</description>
        <label>Package</label>
        <referenceTo>SESOC__Package__c</referenceTo>
        <relationshipLabel>Recipients</relationshipLabel>
        <relationshipName>Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SESOC__Signing_Method__c</fullName>
        <label>Signing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                    <default>true</default>
                    <label>Email</label>
                </value>
                <value>
                    <fullName>Online Application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SESOC__Status__c</fullName>
        <description>The system automatically populates this required picklist to track the status of the recipient. By default, it is Created.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Tagged</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Timed Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SESOC__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this optional lookup field to track the association to a User. By default, it is blank.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SESOC__VendorId__c</fullName>
        <description>The system automatically populates this text field to track the vendor ID of the recipient.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Vendor ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Recipient</label>
    <nameField>
        <displayFormat>R-{000}</displayFormat>
        <label>Recipient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recipients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>